compute-cluster/gitops/components/loki/mneudata-basic-auth.yml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: mneudata-basic-auth
  namespace: loki
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: loki-mneudata
  basicAuth:
    users:
      name: loki-basic-auth
