compute-cluster/gitops/components/loki/mneudata-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki-mneudata
  namespace: loki
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    namespace: envoy-gateway-system
  hostnames:
  - loki.compute.isis.cclrc.ac.uk
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /mneudata-compute
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: X-Scope-OrgID
          value: mneudata-compute
    backendRefs:
    - group: ""
      kind: Service
      name: loki-gateway
      port: 80
      weight: 1
